fix(test): update testListOperators_ReturnsList to assert non-empty response contract
Co-authored-by: NamelessKing <12586190+NamelessKing@users.noreply.github.com>
Agent-Logs-Url: https://github.com/NamelessKing/rentalops-backend/sessions/7b4f758c-18d3-4575-a567-167f9c7ff1b1